<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RecipeActivity"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#C6A2D6"
        app:title="@string/app_name"
        app:menu="@menu/option_menu"
        >


    </androidx.appcompat.widget.Toolbar>


    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/white"
        android:padding="5dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:id="@+id/text_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:text="@string/recipeName"
                android:textSize="30sp"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/ingredients_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/recipeIngredients"
                android:textSize="23sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:layout_marginTop="10dp"
                android:text="@string/ingredients"
                android:textSize="20sp"
                android:textStyle="italic"

                />

            <TextView
                android:id="@+id/method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/recipeName"
                android:textSize="23sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:layout_marginTop="20dp"
                android:text="@string/ingredients"
                android:textSize="20sp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/nutrition_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/nutrition_title"
                android:textSize="23sp"
                android:textStyle="bold|italic" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_nutrition_facts"
                    android:layout_width="174dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="carbs"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/text_fats"
                    android:layout_width="174dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Fats"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_carbs"
                    android:layout_width="174dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Calories"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/text_protein"
                    android:layout_width="174dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Protein"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <TextView
                android:id="@+id/Reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/Reviews"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <RatingBar

                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:numStars="5"
                android:stepSize="0.5" />

            <EditText
                android:id="@+id/comment_edit_text"
                android:layout_width="290dp"
                android:layout_height="80dp"
                android:background="@drawable/comment_background"
                android:hint="@string/write_a_comment"
                android:imeOptions="actionSend"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:layout_marginLeft="30dp"
                android:padding="10dp"
                android:textColorHint="#455A64" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"

                android:layout_marginRight="10dp"
                android:text="@string/submit" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>